# k8s-image-recognition

./: .gitignore  Cargo.toml  Pipfile  README.md  dev.docker-compose.yaml  docker-compose.yaml  docker-compose.yml  get_image_description.http  kube-docker-compose.yaml  requirements.txt
.github/workflows/: docker-image.yml
aws_terraform/: main.tf  master_data.sh  node_data.sh
descrivizio-001/: ApplicationImage.py  DockerFile  ImagePredictionController.py
descrivizio001/: ApplicationImage.py  Dockerfile  ImagePredictionController.py  create_model.py  log.ini  main.py  requirements.txt
descrivizio001-api/: Cargo.toml  DockerFile  Dockerfile
descrivizio001-api/src/: main.rs
descrivizio001-api/src/controllers/: mod.rs
descrivizio001-api/src/models/: mod.rs
descrivizio001-api/src/services/: mod.rs
descrivizio001-web/: Dockerfile  ImageAnalyzerV1.csproj  Program.cs  _Imports.razor  appsettings.Development.json  appsettings.json
descrivizio001-web/Data/: ImageDescription.cs
descrivizio001-web/Pages/: Error.cshtml  Error.cshtml.cs  Index.razor  _Host.cshtml  _Layout.cshtml
descrivizio001-web/Properties/: launchSettings.json
descrivizio001-web/Services/: IIMageDescriptionService.cs  ImageDescriptionService.cs
descrivizio001-web/Shared/: MainLayout.razor  NavMenu.razor
kubernetes/: daemonset.yaml
src/: main.rs
unsplash/: SoucoupeV1.py  TextSet.py  UnsplashPhoto.py  create_model.py  main.py  model_api.py
unsplash/unsplash_datasets/: colors.tsv000  photos.tsv000
