[package]
name = "algue_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = "0.18.0"
image = "0.24.2"
imageproc = "0.23.0"
rust_tokenizers = "7.0.2"
rust-bert = "0.17.0"
tch = "0.6.1"
tokio = { version = "1.13.0", features = ["full"] }