[package]
name = "algue_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3"
reqwest = {version = "0.11.0", features = ["blocking"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"