[package]
name = "descrivizio001-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
futures = "0.3.28"
reqwest = { version = "0.11.0", features = ["blocking", "json", "default-tls", "native-tls"] }
openssl-probe = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4.14"
chrono = "0.4.24"
grcov = "0.8.3"
tokio = "1.27.0"
futures-util = "0.3.28"
rustls = "0.21.0"